# PAPR

./: .gitignore  README.md
PP01/: CMakeLists.txt  PP01.cpp  ppQueue.h  ppRing.h
PP02/: .gitignore  CMakeLists.txt  CommonDef.h  PP02.cpp  xFile.h  xPSNR.cpp  xPSNR.h  xPic.h  xPixelOps.h  xPixelOpsSTD.cpp  xSeq.cpp  xSeq.h
PP03/: CMakeLists.txt  PP03.cpp  ppCommon.h  xPic.cpp  xPic.h  xPixelOpsSTD.h  xSepia.cpp  xSepia.h  xVec4.h
PP04/: CMakeLists.txt  CommonDef.h  PP04.cpp  xFile.h  xPixelOpsSTD.h  xSepia.cpp  xSepia.h
PP05/: CMakeLists.txt  PP05.cpp  PP05A.cpp  ppCommon.h  xEvent.h  xPixelOps.h  xSepia.cpp  xSepia.h  xSeq.cpp  xSeq.h  xThreadPool.cpp  xThreadPool.h  xVec4.h
PP07/: CMakeLists.txt  OpenCL.lib  PP07.cpp  kernels.cl  xOpenCL_Common.h  xOpenCL_Enumerator.cpp  xOpenCL_Enumerator.h  xPic.cpp  xPic.h  xPixelOpsSTD.cpp  xQueue.h  xSepia.cpp  xSepia.h  xSepia_OpenCL.cpp  xSepia_OpenCL.h
